fixed text align

--- a/css/index.css
+++ b/css/index.css
@@ -778,6 +778,7 @@ img {
   .footer .footer-inner {
     flex-direction: row;
     gap: 0;
+    text-align: left;
   }
 }
 .footer .footer-inner h4 {
